hard-gists/4f0c1d94f5f164d67f40a4f1c8b0dc15/run.log
=== Docker Run Log for 4f0c1d94f5f164d67f40a4f1c8b0dc15 ===
Started at: Mi 29. Okt 15:13:41 CET 2025

[2025-10-29 15:13:41] START: Running container for 4f0c1d94f5f164d67f40a4f1c8b0dc15
[2025-10-29 15:13:41] SUCCESS: Container 59137165e67dbbf82e67cf470316bfdbf7a45bfacb133aa54accfc22b3118e4d started for 4f0c1d94f5f164d67f40a4f1c8b0dc15
=== Container logs for 4f0c1d94f5f164d67f40a4f1c8b0dc15 ===
  File "/snippet.py", line 190
    print "Hostname: {}".format(hostname)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4f0c1d94f5f164d67f40a4f1c8b0dc15 ===
[2025-10-29 15:13:43] INFO: Container 59137165e67dbbf82e67cf470316bfdbf7a45bfacb133aa54accfc22b3118e4d has stopped
